TME-EMT updated

--- a/TME-EMT/Biblio/Local-TME-EMT.bib
+++ b/TME-EMT/Biblio/Local-TME-EMT.bib
@@ -962,6 +962,21 @@ MRREVIEWER = {Giovanni Coppola},
   MRNUMBER = {4275089},
        DOI = {10.1112/blms.12460},
 }
+@article {Platt-Trudgian*21b,
+    AUTHOR = {Platt, David J. and Trudgian, Timothy S.},
+     TITLE = {The error term in the prime number theorem},
+   JOURNAL = {Math. Comp.},
+  FJOURNAL = {Mathematics of Computation},
+    VOLUME = {90},
+      YEAR = {2021},
+    NUMBER = {328},
+     PAGES = {871--881},
+      ISSN = {0025-5718},
+   MRCLASS = {11N05 (11M06 11N56)},
+  MRNUMBER = {4194165},
+MRREVIEWER = {Tsz Ho Chan},
+       DOI = {10.1090/mcom/3583},
+}
 @article {Washington-Yang*21,
     AUTHOR = {Washington, Lawrence C. and Yang, Ambrose},
      TITLE = {Analogues of the {R}obin-{L}agarias criteria for the {R}iemann
@@ -10065,7 +10080,28 @@ MRREVIEWER = {S. W. Graham},
   Mrnumber                 = {MR602191 (82d:10057)},
   Mrreviewer               = {Kenneth H. Rosen}
 }
+@article{Cully*21,
+  title={Primes between consecutive powers},
+  author={Cully-Hugill, Michaela},
+  journal={arXiv preprint arXiv:2107.14468},
+  year={2021}
 
+}
+@article {Cully-Trudgian*21,
+    AUTHOR = {Cully-Hugill, Michaela and Trudgian, Tim},
+     TITLE = {Two explicit divisor sums},
+   JOURNAL = {Ramanujan J.},
+  FJOURNAL = {Ramanujan Journal. An International Journal Devoted to the
+              Areas of Mathematics Influenced by Ramanujan},
+    VOLUME = {56},
+      YEAR = {2021},
+    NUMBER = {1},
+     PAGES = {141--149},
+      ISSN = {1382-4090},
+   MRCLASS = {11N37 (11R29)},
+  MRNUMBER = {4311680},
+       DOI = {10.1007/s11139-020-00333-3},
+}
 @Article{Hinz*86,
   Title                    = {Cubefree ideal modulus character sums},
   Author                   = {J. Hinz},
