--- a/TME-EMT/Biblio/biblio.tex
+++ b/TME-EMT/Biblio/biblio.tex
@@ -94,6 +94,7 @@
 \nocite{Kadiri-Faber*13}
 \nocite{Kadiri-Faber*18}
 \nocite{Kadiri*13}
+\nocite{Platt-Trudgian*21b}
 \nocite{Panaitopol*00}
 \nocite{Axler*16}
 \nocite{Ramare*12-1}
@@ -162,6 +163,7 @@
 \nocite{Mardjanichvili*39}
 \nocite{Deshouillers-Dress*88}
 \nocite{Bordelles*02}
+\nocite{Cully-Trudgian*21}
 \nocite{Lapkova*16}
 \nocite{Lapkova*16-2}
 \nocite{Cipu*15-1}
@@ -214,6 +216,7 @@
 \nocite{Chen-Wang*89-2}
 \nocite{Liu-Wang*02-1}
 \nocite{Kadiri-Ng*12}
+\nocite{Kadiri*13}
 \nocite{Ramare*13d}
 \nocite{Kadiri-Lumley-Ng*18}
 \nocite{Qiu*91}
@@ -257,6 +260,7 @@
 \nocite{Pohst-Zassenhaus*89}
 \nocite{Bordelles*02}
 \nocite{Bordelles*06}
+\nocite{Cully-Trudgian*21}
 \nocite{Louboutin*05}
 \nocite{Louboutin*05}
 \nocite{Louboutin*00}
