--- a/TME-EMT/Latex/Art01.tex
+++ b/TME-EMT/Latex/Art01.tex
@@ -153,6 +153,18 @@ $$
 \text{When $x\ge 485\,165\,196$, we have } \psi(x)=x+O^*(0.00053699\,x).
 $$
 
+In
+\cite{Platt-Trudgian*21b},
+one find the following estimate
+\par 
+\begin{thm}{Theorem (2021)}
+
+  When $x\ge e^{2000}$, we have
+  $\biggl|\frac{\psi(x)-x}{x}\biggr|\le 235\,(\log
+  x)^{0.52}\exp-\sqrt{\frac{\log x}{5.573412}}\;.$
+
+
+
 Refined bounds for $\pi(x)$ are to be found in
 \cite{Panaitopol*00}
 and in
@@ -165,7 +177,8 @@ By comparing in an efficient manner with $\psi(x)-x$,
 obtained the next two results.
 
 \par 
-\begin{thm}{Theorem (2013)}
+Theorem (2013)
+
 
   For $x > 1$, we have
   $\sum_{n\le x}\Lambda(n)/n=\log x-\gamma+O^*(1.833/\log^2x)$.
