--- a/TME-EMT/Latex/Art08.tex
+++ b/TME-EMT/Latex/Art08.tex
@@ -270,6 +270,8 @@ We reproduce only a special case.
 \end{thm}
 
 
+See also
+\cite{Kadiri*13}.
 Otherwise, here is the result of
 \cite{Ramare*13d}.
 \par 
