--- a/TME-EMT/Latex/Art13.tex
+++ b/TME-EMT/Latex/Art13.tex
@@ -78,8 +78,10 @@ see \cite{Pohst-Zassenhaus*89}.
 
 In this case, one
 rather uses explicit bounds for the Piltz-Dirichlet divisor functions $\tau_n$
-(see \cite{Bordelles*02}
-and \cite{Bordelles*06})
+(see
+\cite{Bordelles*02}
+and
+\cite{Bordelles*06})
 and get
 $$
 h_K\le \frac{M_K}{(n-1)!}
@@ -94,6 +96,15 @@ M_K=(4/\pi)^{r_2}n!/n^n.
 $$
 The constant $M_K$ is known as the Minkowski constant of K.
 
+In
+\cite{Cully-Trudgian*21}
+we find the following.
+\begin{thm}{Theorem (2021)}
+
+  Ler $K$ be a quartic number field with class number $h_K$ and
+  Minkowski bound $b$. Then if $b\ge 193$, we have
+  $h_K\le (1/3) x(\log x)^3$.
+\end{thm}
 
 
 \section{Using the influence of small primes}
