--- a/TME-EMT/Latex/booklet.tex
+++ b/TME-EMT/Latex/booklet.tex
@@ -94,7 +94,7 @@
     \renewcommand{\headrulewidth}{0pt} %le filet haut
     \renewcommand{\footrulewidth}{0pt}} %le filet bas
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\fancyfoot[LO]{{\sl The TME-EMT project, 2018}}
+\fancyfoot[LO]{{\sl The TME-EMT project, 2021}}
       %definit le pied de page gauche impair
 \fancyfoot[RE]{\date}%definit le pied de page droit pair
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -117,8 +117,8 @@
        ---}
 
 \author{Contributors:\\ {\sl Olivier Bordell\`es, Pierre Dusart,
-    Harald Helfgott,} \\ {\sl Pieter
-  Moree, Akhilesh P.,  Olivier Ramar\'e \& Enrique Trevi\~no}}
+    Charles Greathouse}\\ {\sl Harald Helfgott, Pieter
+  Moree, Akhilesh P.,  Olivier Ramar\'e} \\ {\sl \& Enrique Trevi\~no}}
 
 \begin{document}
 \frontmatter
