--- a/TME-EMT/Latex/Art10.tex
+++ b/TME-EMT/Latex/Art10.tex
@@ -472,6 +472,48 @@ respect to $k$.
 \end{itemize}
 \end{thm}
 
+In 
+\cite{Cully-Trudgian*21}, 
+we find the next result.
+\par 
+\begin{thm}{Theorem (2021)}
+
+  For $x\ge 2$, we have
+$$
+\sum_{n\le x} d_4(n) = C_1x(\log x)^3
++ C_2x(\log x)^2
++C_3x(\log x
++C_4x
++\mathcal{O}^*(4.48\,x^{3/4}\log x)
+$$
+where the constants $C_1=1/6$, $C_2=2\gamma-1/2$, and $C_3$ and $C_4$
+  are the expected ones and may be expressed in terms of the Stieltjes
+  constants $\gamma_i$.
+\end{thm}
+
+They deduce for instance from this that $\sum_{n\le
+x}d_4(n)\le(1/3)x(\log x)^3$ when $x\ge 193$.
+
+In the same paper, these authors also establish the next estimate.
+\par 
+\begin{thm}{Theorem (2021)}
+
+  For $x\ge 2$, we have
+$$
+\sum_{n\le x} d(n)^2 = D_1x(\log x)^3
++ D_2x(\log x)^2
++D_3x(\log x
++D_4x
++\mathcal{O}^*(9.73\,4.48\,x^{3/4}\log x+0.73\,\sqrt{x})
+$$
+where the constants $D_1=1/\pi^2$, and $D_2$, $D_3$ and $D_4$
+  are the expected ones and may be expressed in terms of usual constants.
+\end{thm}
+
+They deduce for instance from this that $\sum_{n\le
+x}d(n)^2\le(1/4)x(\log x)^3$ when $x\ge 433$ and that 
+$\sum_{n\le
+x}d(n)^2\le x(\log x)^3$ when $x\ge 7$.
 
 In
 \cite{Lapkova*16}, we find
