Burgess bound for composite modulus

--- a/TME-EMT/Biblio/biblio.tex
+++ b/TME-EMT/Biblio/biblio.tex
@@ -230,6 +230,7 @@
 \nocite{Trevino*15-2}
 \nocite{McGown*12}
 \nocite{Booker*06}
+\nocite{Jain-Sharma-Khale-Liu*21}
 \nocite{Deleglise-Rivat*96-1}
 \nocite{Deleglise-Rivat*98}
 \nocite{Platt*11}
