Burgess bound for composite modulus

--- a/TME-EMT/Latex/Art12.tex
+++ b/TME-EMT/Latex/Art12.tex
@@ -1,4 +1,4 @@
-\chapter{  Explicit pointwise upper bounds for some special arithmetic functions}
+\chapter{  Explicit pointwise upper bounds for some arithmetic functions}
 
 Corresponding html file: \texttt{../Articles/Art12.html}
 
