--- a/TME-EMT/Latex/Art15.tex
+++ b/TME-EMT/Latex/Art15.tex
@@ -373,7 +373,7 @@ where $C(r)$ is given by
 \par 
 
 
-Finally, if the character is quadratic (and with a more restrictive
+If the character is quadratic (and with a more restrictive
 range), we have slightly stronger results due to Booker in  
 \cite{Booker*06}.
 \par 
@@ -461,7 +461,25 @@ $$
 
 \end{thm}
 
-     
+
+Concerning composite moduli, we have the next result in
+\cite{Jain-Sharma-Khale-Liu*21}
+.
+\par 
+\begin{thm}{Theorem (2021)}
+
+  Let $\chi$ be a primitive character with modulus $q\ge e^{e^{9.594}}$.
+  Then for $N\le q^{5/8}$, we have
+$$
+\left|\sum_{a=M+1}^{M+N}\chi(a)\right|
+  \le 9.07 \sqrt{N}q^{3/16}(\log q)^{1/4}
+  \bigl(2^{\omega(q)}d(q)\bigr)^{3/4}
+  \sqrt{\frac{q}{\varphi(q)}}.
+$$
+\end{thm}
+
+\par 
+
 
  
  
@@ -474,7 +492,7 @@ $$
 
 
   
-\begin{flushright}\small\sl{}   Last updated on April 28th, 2017, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on December 11th, 2021, by Olivier Ramar\'e
  \end{flushright}
 
 
