--- a/ServeurPerso/GP-PARI/3.20/README
+++ b/ServeurPerso/GP-PARI/3.20/README
@@ -1,4 +1,4 @@
-Latest version handled : 3.13
+Latest version handled : 3.20
 
 Copyright (C) 1997-2017 The PARI Group, Bordeaux.
 
@@ -45,7 +45,7 @@ INSTALLATION.
 =============
 
 PARIEMACS consists of 15 files: README (this file, for information
-only), the file pariemacs-3.13.txt which is an exact copy of README
+only), the file pariemacs-3.14.txt which is an exact copy of README
 and is here for users used to this other name, CHANGES, COPYING,
 pari.el, pari-conf.el that contains system dependent variables,
 pari.cfg-default that helps create pari-conf.el from pari-conf.el.in
@@ -101,9 +101,16 @@ Some specific highlighting is then enabled when editing *.gp files
 when editing such scripts and two main new commands are made available:
 
 M-x gp      starts up the pari-gp process in a new buffer,  *PARI*
-            A menu item GP is available with some specific comamnds.
+            A menu item GP is available with some specific commands.
 M-x gpman   starts up a dvi previewer with the PARI-GP manual. 
 
+===========================================================================
+TROUBLE-SHOOTING:
+=================
+(1) In case the parentheses are wrongly handled, please set show-paren-mode
+to t in your .emacs. This can be done from the Customize / Specific Option / ...
+from the emacs Edit-menu.
+(2) On some systems, the colors appear only when GP is started.
 ===========================================================================
 
 GP-MODE/GP-SCRIPT-MODE:
@@ -407,6 +414,20 @@ is 3 spaces. The indentation after "{" is decided by gp-indent-level.
 This string is special because it appears in gp-fixed-keys-alist: when
 it occurs as the first word of a line, it will be placed at a fixed place
 from the left margin, originally separated by 0 spaces from it.
+
+/* Wanted:
+
+while(1,
+  if(toto, inst
+  , lereste)
+
+  if(toto,
+    inst
+  , lereste
+  )
+
+*/
+
 
 If you want a style like
 {
@@ -770,5 +791,5 @@ with the package; see the file 'COPYING'. If not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 
 ===========================================================================
-05-12-2017 version 3.14 (This file refers to pariemacs version 3.14)
+04-12-2017 version 3.14 (This file refers to pariemacs version 3.14)
 
