TME-EMT updated

--- a/TME-EMT/Biblio/Local-TME-EMT.bib
+++ b/TME-EMT/Biblio/Local-TME-EMT.bib
@@ -1,5 +1,34 @@
 % This file was created with JabRef 2.10b2.
 % Encoding: UTF-8
+@book {Bell*65,
+    AUTHOR = {Bell, E. T.},
+     TITLE = {Men of mathematics},
+      NOTE = {Paperback of the 1937 edition [ MR3728303]},
+ PUBLISHER = {Simon \& Schuster, New York},
+      YEAR = {1965},
+     PAGES = {xvii+590},
+   MRCLASS = {01A05 (01A70)},
+  MRNUMBER = {3728304},
+}
+	
+
+@Book{Faulhaber*31,
+  author = 	 {Faulhaber, Johannes},
+  ALTeditor = 	 {},
+  title = 	 {Academia Algebrae,},
+  publisher = 	 {},
+  year = 	 {},
+  OPTkey = 	 {},
+  OPTvolume = 	 {},
+  OPTnumber = 	 {},
+  OPTseries = 	 {},
+  OPTaddress = 	 {},
+  OPTedition = 	 {},
+  OPTmonth = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
 @Article{Binet*43,
   Title                    = {{M\'emoire sur l'int\'egration des \'equations lin\'eaires aux diff\'erences finies, d'un ordre quelconque, \`a coefficients variables}},
   Author                   = {Binet, M.J. },
@@ -21,6 +50,20 @@
    MRCLASS = {11L40},
   MRNUMBER = {4322829},
        DOI = {10.1142/S1793042121500834},
+}
+@incollection {Ivic*81,
+    AUTHOR = {Ivi\'{c}, A.},
+     TITLE = {Exponent pairs and power moments of the zeta-function},
+ BOOKTITLE = {Topics in classical number theory, {V}ol. {I}, {II}
+              ({B}udapest, 1981)},
+    SERIES = {Colloq. Math. Soc. J\'{a}nos Bolyai},
+    VOLUME = {34},
+     PAGES = {749--768},
+ PUBLISHER = {North-Holland, Amsterdam},
+      YEAR = {1984},
+   MRCLASS = {11M06},
+  MRNUMBER = {781161},
+MRREVIEWER = {Masako Izumi},
 }
 @article {Matomaki-Shao*17,
     AUTHOR = {Matom\"{a}ki, Kaisa and Shao, Xuancheng},
@@ -1427,7 +1470,6 @@ MRREVIEWER = {S. W. Graham},
   MRNUMBER = {1283874},
 MRREVIEWER = {H. L. Montgomery},
        DOI = {10.2307/2118576},
-       URL = {http://dx.doi.org/10.2307/2118576},
 }
 
 @Article{Ettahri-Ramare-Surel*19a,
@@ -1488,17 +1530,19 @@ MRREVIEWER = {T. N. Shorey},
        URL = {http://www.numdam.org/item?id=CM_1984__53_2_225_0},
 }
 	
-@Article{Ettahri-Ramare-Surel*19,
-  author = 	 {Salma Ettahri and Olivier Ramar\'e and L\'eon Surel},
-  title = 	 {Fast multi-precision computation of some Euler products},
-  journal = 	 {Submitted},
-  year = 	 {2019},
-  OPTkey = 	 {},
-  OPTvolume = 	 {},
-  OPTnumber = 	 {},
-  pages = 	 {23p},
-  OPTmonth = 	 {},
-  OPTannote = 	 {}
+@article {Ettahri-Ramare-Surel*19,
+    AUTHOR = {Ettahri, S. and Ramar\'{e}, O. and Surel, L.},
+     TITLE = {Fast multi-precision computation of some {E}uler products},
+   JOURNAL = {Math. Comp.},
+  FJOURNAL = {Mathematics of Computation},
+    VOLUME = {90},
+      YEAR = {2021},
+    NUMBER = {331},
+     PAGES = {2247--2265},
+      ISSN = {0025-5718},
+   MRCLASS = {11Y60},
+  MRNUMBER = {4280300},
+       DOI = {10.1090/mcom/3630},
 }
 
 @Article{Ramare-Walker*16,
@@ -5301,15 +5345,27 @@ MRREVIEWER = {Olivier Bordell\`es},
   Volume                   = {42}
 }
 
-@Article{Cilleruelo-Ramare-Ramare-16,
-  Title                    = {Quotients and products of thin subsets of the positive integers},
+@article {Cilleruelo-Ramare-Ramare-16,
   Author                   = {J. Cilleruelo and D.S. Ramana and O. Ramar\'e},
-  Journal                  = {Proc. of the Steklov Inst. of Math.},
-  Year                     = {2016},
-  OptNumber                   = {3},
-  Pages                    = {15 pp.},
-  Volume                   = {296},
+     TITLE = {Quotients and products of zero-density subsets of the set of
+              positive integers},
+      NOTE = {English version published in Proc. Steklov Inst. Math.
+              {{\bf{2}}96} (2017), no. 1, 52--64},
+   JOURNAL = {Tr. Mat. Inst. Steklova},
+  FJOURNAL = {Trudy Matematicheskogo Instituta Imeni V. A. Steklova},
+    VOLUME = {296},
+      YEAR = {2017},
+    NUMBER = {Analiticheskaya i Kombinatornaya Teoriya Chisel},
+     PAGES = {58--71},
+      ISSN = {0371-9685},
+      ISBN = {5-7846-0141-5; 978-5-7846-0141-4},
+   MRCLASS = {11B30},
+  MRNUMBER = {3640773},
+MRREVIEWER = {Romeo Me\v{s}trovi\'{c}},
+       DOI = {10.1134/S0371968517010058},
 }
+
+
 @Article{Cilleruelo-Shparlinski*13,
   Title                    = {{Concentration of points on curves in finite fields.}},
   Author                   = {Javier {Cilleruelo} and Igor {Shparlinski}},
@@ -7441,7 +7497,7 @@ MRREVIEWER = {I. Niven},
        DOI = {10.2307/1995928},
        URL = {https://doi.org/10.2307/1995928},
 }
-@book {Niven-Zuckerman-Montgonemry*91,
+@book {Niven-Zuckerman-Montgomery*91,
     AUTHOR = {Niven, Ivan and Zuckerman, Herbert S. and Montgomery, Hugh L.},
      TITLE = {An introduction to the theory of numbers},
    EDITION = {Fifth},
@@ -7627,7 +7683,43 @@ MRREVIEWER = {I. Niven},
 
   File                     = {:/home/ramare/tex/Other/Ford/zetabd.pdf:PDF;:/home/ramare/tex/Other/Ford/Ford.pdf:PDF}
 }
-
+@article {Shteinikov*17,
+    AUTHOR = {Shte\u{\i}nikov, Yu. N.},
+     TITLE = {Addendum to {J}. {C}illeruelo, {D}.{S}. {R}amana, and {O}.
+              {R}amar\'{e}'s paper ``{Q}uotients and products of zero-density
+              subsets of the set of positive integers'' [ {MR}3640773]},
+      NOTE = {English version published in Proc. Steklov Inst. Math.
+              {{\bf{2}}96} (2017), no. 1, 251--255},
+   JOURNAL = {Tr. Mat. Inst. Steklova},
+  FJOURNAL = {Trudy Matematicheskogo Instituta Imeni V. A. Steklova},
+    VOLUME = {296},
+      YEAR = {2017},
+    NUMBER = {Analiticheskaya i Kombinatornaya Teoriya Chisel},
+     PAGES = {260--264},
+      ISSN = {0371-9685},
+      ISBN = {5-7846-0141-5; 978-5-7846-0141-4},
+   MRCLASS = {11B30},
+  MRNUMBER = {3640788},
+MRREVIEWER = {Romeo Me\v{s}trovi\'{c}},
+       DOI = {10.1134/S0371968517010204},
+}
+@article {Ford*18,
+    AUTHOR = {Ford, Kevin},
+     TITLE = {Extremal properties of product sets},
+      NOTE = {Published in Russian in Tr. Mat. Inst. Steklova {{\bf{3}}03}
+              (2018), 239--245},
+   JOURNAL = {Proc. Steklov Inst. Math.},
+  FJOURNAL = {Proceedings of the Steklov Institute of Mathematics},
+    VOLUME = {303},
+      YEAR = {2018},
+    NUMBER = {1},
+     PAGES = {220--226},
+      ISSN = {0081-5438},
+   MRCLASS = {11B30 (11N37)},
+  MRNUMBER = {3920222},
+MRREVIEWER = {Mitchel T. Keller},
+}
+				
 @Article{Ford*01,
   Title                    = {Zero-free regions for the {R}iemann zeta function},
   Author                   = {K. Ford},
@@ -9805,7 +9897,6 @@ MRREVIEWER = {R. H. Bruck},
   Mrclass                  = {10F40 (10H32)},
   Mrnumber                 = {MR686496 (84d:10044)},
   Mrreviewer               = {Matti Jutila},
-  Url                      = {http://dx.doi.org/10.1112/jlms/s2-27.1.9}
 }
 
 @Article{Harman*82b,
@@ -10354,7 +10445,6 @@ MRREVIEWER = {Ming Gao Lu},
   Mrclass                  = {11L40},
   Mrnumber                 = {955953 (89k:11073)},
   Mrreviewer               = {Matti Jutila},
-  Url                      = {http://dx.doi.org/10.1016/0022-314X(88)90106-0}
 }
 
 @incollection {Hildebrand*89,
@@ -10390,7 +10480,6 @@ MRREVIEWER = {S. W. Graham},
   Mrclass                  = {11L40},
   Mrnumber                 = {956367 (89k:11072)},
   Mrreviewer               = {Matti Jutila},
-  Url                      = {http://dx.doi.org/10.4153/CMB-1988-050-1}
 }
 
 @Article{Hildebrand-Maier*88,
@@ -10969,7 +11058,22 @@ MRREVIEWER = {Hartmut Menzer},
   Pages                    = {201--208},
   Volume                   = {119}
 }
+@article {Huxley*05,
+    AUTHOR = {Huxley, M. N.},
+     TITLE = {Exponential sums and the {R}iemann zeta function. {V}},
+   JOURNAL = {Proc. London Math. Soc. (3)},
+  FJOURNAL = {Proceedings of the London Mathematical Society. Third Series},
+    VOLUME = {90},
+      YEAR = {2005},
+    NUMBER = {1},
+     PAGES = {1--41},
+      ISSN = {0024-6115},
+   MRCLASS = {11L07 (11M06)},
+  MRNUMBER = {2107036},
+MRREVIEWER = {Matti Jutila},
+       DOI = {10.1112/S0024611504014959},
 
+}
 @Article{Huxley*07,
   Title                    = {The integer points in a plane curve},
   Author                   = {M. N. Huxley},
@@ -11002,6 +11106,36 @@ MRREVIEWER = {Hartmut Menzer},
   MRNUMBER = {0222047},
 MRREVIEWER = {R. Ayoub},
        DOI = {10.4064/aa-13-3-267-313},
+}
+@article {Linnik*60,
+    AUTHOR = {Linnik, Ju. V.},
+     TITLE = {An asymptotic formula in an additive problem of
+              {H}ardy-{L}ittlewood},
+   JOURNAL = {Izv. Akad. Nauk SSSR Ser. Mat.},
+  FJOURNAL = {Izvestiya Akademii Nauk SSSR. Seriya Matematicheskaya},
+    VOLUME = {24},
+      YEAR = {1960},
+     PAGES = {629--706},
+      ISSN = {0373-2436},
+   MRCLASS = {10.46},
+  MRNUMBER = {0122796},
+MRREVIEWER = {S. Chowla},
+}
+@article {Teravainen*18a,
+    AUTHOR = {Ter\"{a}v\"{a}inen, Joni},
+     TITLE = {The {G}oldbach problem for primes that are sums of two squares
+              plus one},
+   JOURNAL = {Mathematika},
+  FJOURNAL = {Mathematika. A Journal of Pure and Applied Mathematics},
+    VOLUME = {64},
+      YEAR = {2018},
+    NUMBER = {1},
+     PAGES = {20--70},
+      ISSN = {0025-5793},
+   MRCLASS = {11P32 (11N32 11N36)},
+  MRNUMBER = {3778213},
+MRREVIEWER = {Alisa Sedunova},
+       DOI = {10.1112/S0025579317000341},
 }
 @Article{Indlekofer*74,
   Title                    = {Scharfe {A}bsch\"atchung f\"ur die {A}nzahlfunction der $B$-{Z}willinge},
@@ -11323,6 +11457,22 @@ MRREVIEWER = {R. Ayoub},
   MRNUMBER = {3653094},
 MRREVIEWER = {Martin Mereb},
        DOI = {10.1112/jlms.12017},
+}
+
+@article {DeKoninck-Letendre*20,
+    AUTHOR = {De Koninck, Jean-Marie and Letendre, Patrick},
+     TITLE = {New upper bounds for the number of divisors function},
+   JOURNAL = {Colloq. Math.},
+  FJOURNAL = {Colloquium Mathematicum},
+    VOLUME = {162},
+      YEAR = {2020},
+    NUMBER = {1},
+     PAGES = {23--52},
+      ISSN = {0010-1354},
+   MRCLASS = {11N37 (11N56)},
+  MRNUMBER = {4114050},
+MRREVIEWER = {O. Ramar\'{e}},
+       DOI = {10.4064/cm7792-6-2019},
 }
 
 @article {Friedlander-Kurlberg-Shparlinski*08,
@@ -12014,7 +12164,7 @@ MRREVIEWER = {J. A. Haight},
   Issue                    = {1},
   Keyword                  = {Mathematics and Statistics},
   Publisher                = {Springer Berlin / Heidelberg},
-  Url                      = {http://dx.doi.org/10.1007/BF01206619}
+  DOI                     = {10.1007/BF01206619}
 }
 
 @Article{Klimov*80,
@@ -12777,6 +12927,19 @@ Author = {E. {Landau}},
   Volume                   = {99}
 }
 
+@PhdThesis{Mangerel*14,
+  author = 	 {Alexander P. Mangerel},
+  title = 	 {The Multiplication Table and its Generalizations},
+  school = 	 {U. Toronto},
+  year = 	 {2014},
+  OPTkey = 	 {},
+  OPTtype = 	 {},
+  OPTaddress = 	 {},
+  OPTmonth = 	 {},
+  URL = 	 {https://hdl.handle.net/1807/68996},
+  OPTannote = 	 {}
+}
+
 @Article{Landreau*89,
   Title                    = {A new proof of a theorem of van der {C}orput},
   Author                   = {B. Landreau},
@@ -13173,7 +13336,6 @@ MRREVIEWER = {J. H. Jordan},
   Year                     = {1965},
   Pages                    = {209-216},
   Volume                   = {11},
-
   File                     = {:/home/ramare/tex/Other/Acta/aa1117vanLintRichert.pdf:PDF}
 }
 
@@ -15939,13 +16101,23 @@ MRREVIEWER = {John H. Loxton},
   Number                   = {2}
 }
 
-@Article{Ramana-Ramare*18,
-  Title                    = {Variant of the {T}runcated {P}erron {F}ormula / {P}rimes in polynomial sets},
-  Author                   = {D.S. Ramana and O. Ramar{\'e}},
-  Journal                  = {To appear in Int. Jour. Number Theory},
-  Year                     = {2018},
-  Pages                    = {13 pp},
+@article {Ramana-Ramare*18,
+    AUTHOR = {Ramana, D. S. and Ramar\'{e}, O.},
+     TITLE = {Variant of the truncated {P}erron formula and primes in
+              polynomial sets},
+   JOURNAL = {Int. J. Number Theory},
+  FJOURNAL = {International Journal of Number Theory},
+    VOLUME = {16},
+      YEAR = {2020},
+    NUMBER = {2},
+     PAGES = {309--323},
+      ISSN = {1793-0421},
+   MRCLASS = {11N05 (11M06)},
+  MRNUMBER = {4077424},
+MRREVIEWER = {Debika Banerjee},
+       DOI = {10.1142/S1793042120500165},
 }
+
 @article {Bauer*20,
     AUTHOR = {Bauer, Claus},
      TITLE = {An {$L$}-function free proof of {H}ua's theorem on sums of
@@ -16471,6 +16643,26 @@ MRREVIEWER = {D. J. Lewis},
   Pages                    = {645-706},
   Volume                   = {21}
 }
+
+@article {Ramare*20a,
+    AUTHOR = {Ramar\'{e}, O.},
+     TITLE = {Accurate computations of {E}uler products over primes in
+              arithmetic progressions},
+   JOURNAL = {Funct. Approx. Comment. Math.},
+  FJOURNAL = {Uniwersytet im. Adama Mickiewicza w Poznaniu. Wydzia\l 
+              Matematyki i Informatyki. Functiones et Approximatio
+              Commentarii Mathematici},
+    VOLUME = {65},
+      YEAR = {2021},
+    NUMBER = {1},
+     PAGES = {33--45},
+      ISSN = {0208-6573},
+   MRCLASS = {11Y60 (05A15 11N13)},
+  MRNUMBER = {4311494},
+       DOI = {10.7169/facm/1853},
+       URL = {https://doi.org/10.7169/facm/1853},
+}
+
 @article {Pintz*74,
     AUTHOR = {Pintz, J.},
      TITLE = {On {S}iegel's theorem},
