--- a/TME-EMT/Biblio/biblio.tex
+++ b/TME-EMT/Biblio/biblio.tex
@@ -113,6 +113,7 @@
 \nocite{Massias-Robin*96}
 \nocite{Dusart*99-2}
 \nocite{Carneiro-Milinovich-Soundararajan*19}
+\nocite{DeKoninck-Letendre*20}
 \nocite{McCurley*84-2}
 \nocite{McCurley*84-3}
 \nocite{Ramare-Rumely*96}
