--- a/TME-EMT/Latex/Art01.tex
+++ b/TME-EMT/Latex/Art01.tex
@@ -572,7 +572,7 @@ More precise bounds are given.
 
 
   
-\begin{flushright}\small\sl{}   Last updated on January 1rst, 2019, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on January 22nd, 2022, by Olivier Ramar\'e
  \end{flushright}
 
 
