--- a/TME-EMT/Biblio/biblio.tex
+++ b/TME-EMT/Biblio/biblio.tex
@@ -104,6 +104,9 @@
 \nocite{Schoenfeld*76}
 \nocite{Dusart*07}
 \nocite{Trevino*12}
+\nocite{Axler*19}
+\nocite{Deleglise-Nicolas*19a}
+\nocite{Deleglise-Nicolas*19b}
 \nocite{Rosser*38}
 \nocite{Cipolla*02}
 \nocite{Rosser*38}
@@ -113,6 +116,7 @@
 \nocite{Massias-Robin*96}
 \nocite{Dusart*99-2}
 \nocite{Carneiro-Milinovich-Soundararajan*19}
+\nocite{Axler*19}
 \nocite{DeKoninck-Letendre*20}
 \nocite{McCurley*84-2}
 \nocite{McCurley*84-3}
