--- a/TME-EMT/Latex/Art01.tex
+++ b/TME-EMT/Latex/Art01.tex
@@ -336,6 +336,61 @@ table.
 
 \par 
 
+Further estimates can be found in
+ \cite{Axler*19}
+(Proposition 2.7 and Corollary 2.8).
+
+  
+In
+\cite{Deleglise-Nicolas*19a}
+(Proposition 2.7 and Corollary 2.8) and
+\cite{Deleglise-Nicolas*19b}
+(Proposition 2.5, Corollary 2.6, 2.7 and 2.8),
+we find among other results the next two.
+\par 
+\begin{thm}{Theorem (2019)}
+
+  On setting $\pi_r(x)=\sum_{p\le x}p^r$, we have
+  $$
+  \frac{3x^2}{20(\log x)^4}
+  \le \pi_1(x)-\biggl(
+  \frac{x^2}{2\log x}
+  +\frac{x^2}{4(\log x)^2}
+  \frac{x^2}{4(\log x)^3}
+  \biggr)
+  \le
+  \frac{107x^2}{160(\log x)^4}
+  $$
+  where the upper estimate is valid when $x\ge 110117910$
+  and the lower one when $x\ge905238547$.
+  \par 
+    We have
+    $$
+  \frac{-1069x^3}{648(\log x)^4}
+  \le \pi_2(x)-\biggl(
+  \frac{x^3}{3\log x}
+  +\frac{x^3}{9(\log x)^2}
+  \frac{x^3}{27(\log x)^3}
+  \biggr)
+  \le
+  \frac{11181x^3}{648(\log x)^4}
+    $$
+    where the upper estimate is valid when $x\ge 60173$
+    and the lower one when $x\ge 1091239$.
+    \par 
+      $$      \pi_3(x)\le 0.271\frac{x^4}{\log x}\quad\text{for $x\ge 664$},$$
+      $$      \pi_4(x)\le 0.237\frac{x^5}{\log x}\quad\text{for $x\ge 200$},$$
+      $$      \pi_5(x)\le 0.226\frac{x^5}{\log x}\quad\text{for $x\ge 44$},$$
+      For $x\ge 1$ and $r\ge5$, we have
+      $$ \pi_r(x)\le \frac{\log 3}{3}\bigl(1+(2/3)^r\bigr)
+      \frac{x^{r+1}}{\log x}$$.
+\end{thm}
+
+
+
+
+
+  
 
 \section{Bounds containing $n$-th prime}
 
@@ -412,6 +467,29 @@ the authors  prove the next result.
 \begin{thm}{Theorem (2019)}
 
 Under the Riemann Hypothesis we have $p_{n+1}-p_n\le\frac{22}{25}\sqrt{p_n}\log p_n$.
+\end{thm}
+
+
+\par 
+\par 
+In 
+\cite{Axler*19},
+we find (Theorem 1.6 and 1.7) the next result.
+\par 
+\begin{thm}{Theorem (2019)}
+
+  We have
+  $$
+  \sum_{i\le k}p_i\ge
+  \frac{k^2}4 +\frac{k^2}{4\log k}
+  -\frac{k^2(\log\log k-2.9)}{4(\log k)^2}\quad(\text{for $k\ge 6309751$}),
+  $$
+  as well as
+  $$
+  \sum_{i\le k}p_i\le
+  \frac{k^2}4 +\frac{k^2}{4\log k}
+  -\frac{k^2(\log\log k-4.42)}{4(\log k)^2}\quad(\text{for $k\ge 256376$}),
+  $$
 \end{thm}
 
 
