--- a/TME-EMT/Latex/Local-TME-EMT.bib
+++ b/TME-EMT/Latex/Local-TME-EMT.bib
@@ -11,7 +11,21 @@
   MRNUMBER = {3728304},
 }
 	
-
+@article {Axler*19,
+    AUTHOR = {Axler, Christian},
+     TITLE = {On the sum of the first {$n$} prime numbers},
+   JOURNAL = {J. Th\'{e}or. Nombres Bordeaux},
+  FJOURNAL = {Journal de Th\'{e}orie des Nombres de Bordeaux},
+    VOLUME = {31},
+      YEAR = {2019},
+    NUMBER = {2},
+     PAGES = {293--311},
+      ISSN = {1246-7405},
+   MRCLASS = {11N05},
+  MRNUMBER = {4030908},
+MRREVIEWER = {Xiannan Li},
+       URL = {http://jtnb.cedram.org/item?id=JTNB_2019__31_2_293_0},
+}
 @Book{Faulhaber*31,
   author = 	 {Faulhaber, Johannes},
   ALTeditor = 	 {},
@@ -6000,6 +6014,30 @@ MRREVIEWER = {D. R. Heath-Brown},
   Year                     = {1849},
   Pages                    = {397-401, 738-739},
   Volume                   = {29}
+}
+@article {Deleglise-Nicolas*19a,
+    AUTHOR = {Del\'{e}glise, Marc and Nicolas, Jean-Louis},
+     TITLE = {An arithmetic equivalence of the {R}iemann hypothesis},
+   JOURNAL = {J. Aust. Math. Soc.},
+  FJOURNAL = {Journal of the Australian Mathematical Society},
+    VOLUME = {106},
+      YEAR = {2019},
+    NUMBER = {2},
+     PAGES = {235--273},
+      ISSN = {1446-7887},
+   MRCLASS = {11A25 (11-04 11N05 11N37)},
+  MRNUMBER = {3919379},
+MRREVIEWER = {Carlo Sanna},
+       DOI = {10.1017/S1446788718000083},
+}
+@article {Deleglise-Nicolas*19b,
+    AUTHOR = {Del\'{e}glise, Marc and Nicolas, Jean-Louis},
+     TITLE = {The {L}andau function and the {R}iemann Hypothesis},
+   JOURNAL = {J. Combinatorics and Numb. Th.},
+    VOLUME = {11},
+      YEAR = {2019},
+    NUMBER = {2},
+     PAGES = {45--95},
 }
 
 @Article{Deleglise-Rivat*98,
